# trustle_task_challenge

./: SOLUTION.md  pyproject.toml
