[project]
name = "trustle-task-challenge"
version = "0.1.0"
description = "Trustle tesk scheduler."
authors = [
    {name = "Albert Latham",email = "me@albertlatham.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<3.14,>=3.8"

dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [
    {include = "app"}
]

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
